== 0.1.0

* Enhancements
  * Created Patient-Event model along with Prescreens
  * Patient information stored as star schema
  * Prescreens can be added en-masse by copying from a tab-delimited spreadsheet
    * Can now be set to filter by a whitelist doctors and clinic, and within age range
  * Prescreen table is now editable inline
  * Patient List is now masked

== 0.0.0

* Skeleton files to initialize Rails application with testing framework and continuous integration